# cpimorse

./: CMakeLists.txt  main.c
morse_alphabet/: CMakeLists.txt  morse_alphabet.c  morse_alphabet.h
